[package]

name = "conduit-json-parser"
version = "0.7.0"
authors = ["wycats@gmail.com",
           "Alex Crichton <alex@alexcrichton.com>"]
description = "Middleware to parse incoming JSON requests for conduit"
repository = "https://github.com/conduit-rust/conduit-json-parser"
license = "MIT"

[dependencies]
conduit = "0.7"
conduit-middleware = "0.7"
conduit-utils = "0.7"
semver = "0.1.0"
rustc-serialize = "0.3"

[dev-dependencies]
conduit-test = "0.7"
