[package]

name = "conduit-json-parser"
version = "0.8.0"
authors = ["wycats@gmail.com",
           "Alex Crichton <alex@alexcrichton.com>"]
description = "Middleware to parse incoming JSON requests for conduit"
repository = "https://github.com/conduit-rust/conduit-json-parser"
license = "MIT"

[dependencies]
conduit = "0.8"
conduit-middleware = "0.8"
conduit-utils = "0.8"
semver = "0.5.0"
rustc-serialize = "0.3"

[dev-dependencies]
conduit-test = "0.8"
